--- a/src/styles/components/GraphicNavigation.scss
+++ b/src/styles/components/GraphicNavigation.scss
@@ -7,17 +7,23 @@
     display: flex;
     justify-content: space-around;
     .list-item {
-      width: 65px;
-      height: 65px;
+      width: 130px;
+      height: 130px;
       overflow: hidden;
+
       flex-shrink: 0;
+      display: flex;
+      flex-direction: column;
+      .list-item-img-box {
+        overflow: hidden;
+      }
       .list-item-img {
         padding: 0 12px;
-        height: 40px;
+        height: 80px;
       }
       .list-item-title {
-        height: 25px;
-        font-size: 13px;
+        flex: 1;
+        font-size: 26px;
         display: flex;
         justify-content: center;
         align-items: center;
