--- a/src/styles/components/GraphicNavigation.scss
+++ b/src/styles/components/GraphicNavigation.scss
@@ -15,11 +15,14 @@
       display: flex;
       flex-direction: column;
       .list-item-img-box {
+        padding: 0 12px;
+        box-sizing: border-box;
         overflow: hidden;
+        height: 80px;
+        width: 100%;
       }
       .list-item-img {
-        padding: 0 12px;
-        height: 80px;
+        width: 100%;
       }
       .list-item-title {
         flex: 1;
