style: 轮播组件适配150px

--- a/src/styles/components/PhotoAds.scss
+++ b/src/styles/components/PhotoAds.scss
@@ -1,9 +1,12 @@
 .lwj-photo-ads {
   .swiper-img {
     width: 100%;
-    height: 150px;
+    height: 300px;
   }
   .normal-img {
     width: 100%;
+  }
+  taro-swiper-core{
+    height: 300px;
   }
 }
