--- a/src/styles/components/ProductRecommendation.scss
+++ b/src/styles/components/ProductRecommendation.scss
@@ -20,10 +20,14 @@
       padding: 8px;
       .list-item-img-box {
         overflow: hidden;
+        margin: 0 10px;
       }
       .list-item-img {
         width: 100%;
         height: 335px;
+        border-radius: 10px;
+        border: 1px solid #f4f4f4;
+        box-sizing: border-box;
       }
 
       .list-item-info {
@@ -41,12 +45,16 @@
           color: rgba(136, 136, 136, 1);
           line-height: 1;
           margin-top: 10px;
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
         .price {
           font-size: 28px;
           color: rgba(232, 97, 64, 1);
           line-height: 1;
-          margin-top: 10px;
+          margin-top: 20px;
         }
         .sales_volume {
           font-size: 18px;
