--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import "./components/PhotoAds.scss";
 @import "./components/PhotoCube.scss";
 @import "./components/ProductRecommendation.scss";
+@import "./components/Swiper.scss";
