feat: swiper增加高度判断

--- a/src/styles/components/PhotoAds.scss
+++ b/src/styles/components/PhotoAds.scss
@@ -11,3 +11,16 @@
     height: 300px;
   }
 }
+.plus-lwj-photo-ads {
+  .swiper-img {
+    width: 100%;
+    height: 590px;
+  }
+  .normal-img {
+    width: 100%;
+    height: auto;
+  }
+  taro-swiper-core{
+    height: 590px;
+  }
+}
