--- a/src/styles/components/PhotoAds.scss
+++ b/src/styles/components/PhotoAds.scss
@@ -12,6 +12,10 @@
   }
 }
 .plus-lwj-photo-ads {
+  height: 590px;
+  swiper {
+    height: 590px;
+  }
   .swiper-img {
     width: 100%;
     height: 590px;
