fix: image height

--- a/src/styles/components/PhotoAds.scss
+++ b/src/styles/components/PhotoAds.scss
@@ -5,6 +5,7 @@
   }
   .normal-img {
     width: 100%;
+    vertical-align: middle;
   }
   taro-swiper-core{
     height: 300px;
@@ -21,6 +22,7 @@
   }
   .normal-img {
     width: 100%;
+    vertical-align: middle;
   }
   taro-swiper-core{
     height: 590px;
