--- a/src/styles/components/PhotoAds.scss
+++ b/src/styles/components/PhotoAds.scss
@@ -10,21 +10,21 @@
   taro-swiper-core{
     height: 300px;
   }
-}
-.plus-lwj-photo-ads {
-  height: 590px;
-  swiper {
+  .plus {
     height: 590px;
-  }
-  .swiper-img {
-    width: 100%;
-    height: 590px;
-  }
-  .normal-img {
-    width: 100%;
-    vertical-align: middle;
-  }
-  taro-swiper-core{
-    height: 590px;
+    swiper {
+      height: 590px;
+    }
+    .swiper-img {
+      width: 100%;
+      height: 590px;
+    }
+    .normal-img {
+      width: 100%;
+      vertical-align: middle;
+    }
+    taro-swiper-core{
+      height: 590px;
+    }
   }
 }
