--- a/src/styles/components/GraphicNavigation.scss
+++ b/src/styles/components/GraphicNavigation.scss
@@ -27,9 +27,11 @@
       .list-item-title {
         flex: 1;
         font-size: 26px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        color: red;
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
