--- a/src/styles/components/ProductRecommendation.scss
+++ b/src/styles/components/ProductRecommendation.scss
@@ -38,6 +38,10 @@
           font-size: 26px;
           line-height: 1;
           margin-top: 10px;
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
         .desc {
           font-size: 24px;
