--- a/src/styles/components/GraphicNavigation.scss
+++ b/src/styles/components/GraphicNavigation.scss
@@ -7,22 +7,22 @@
     display: flex;
     justify-content: space-around;
     .list-item {
-      width: 130px;
-      height: 130px;
       overflow: hidden;
-
       flex-shrink: 0;
       display: flex;
       flex-direction: column;
+      font-size: 22rpx;
+      color: #333;
       .list-item-img-box {
         padding: 0 12px;
         box-sizing: border-box;
         overflow: hidden;
-        height: 80px;
         width: 100%;
+        text-align: center;
       }
       .list-item-img {
-        width: 100%;
+        width: 75rpx;
+        height: 75rpx;
       }
       .list-item-title {
         flex: 1;
