--- a/src/styles/components/GraphicNavigation.scss
+++ b/src/styles/components/GraphicNavigation.scss
@@ -13,6 +13,7 @@
       flex-direction: column;
       font-size: 22rpx;
       color: #333;
+      max-width: 130rpx;
       .list-item-img-box {
         padding: 0 12px;
         box-sizing: border-box;
